patched creation modal overflow bug

--- a/clinic-schedule/src/app/components/create-appointment-modal/create-appointment-modal.component.scss
+++ b/clinic-schedule/src/app/components/create-appointment-modal/create-appointment-modal.component.scss
@@ -1,6 +1,6 @@
 .content {
+    padding-top: 20px;
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
